--- a/Payment/add-card.html
+++ b/Payment/add-card.html
@@ -26,19 +26,17 @@
     <div class="form-container">
 
         <div class="field-container">
-        	<label for="cardnumber" class="fb"><font color="red">*</font>Name on card</label>
+        	<label for="cardname" class="fb"><font color="red">*</font>Name on card</label>
           <div class="blank"></div>
-            <input id="name" maxlength="20" type="text" inputmode="numeric" autocomplete="autocomplete" autofocus="autofocus"
-            placeholder="Name on Card" required 
-             name="data[Card Holder]">
+            <input id="name" maxlength="20" type="text" autocomplete="autocomplete" autofocus="autofocus" placeholder="Name on Card" required name="data[Card Holder]">
         </div>
 
         <div class="field-container">
-        	<label for="cardname"><font color="red">*</font>Card number</label>
+        	<label for="cardnumber"><font color="red">*</font>Card number</label>
            <div class="blank"></div> 
-            <input id="cardnumber" type="text" maxlength="25" autocomplete="autocomplete"
-            placeholder="Card Number" required  name="data[Card Number]">        
+            <input id="cardnumber" type="text" maxlength="25" inputmode="numeric" autocomplete="autocomplete" placeholder="Card Number" required  name="data[Card Number]">        
         </div>
+      
         <div class="field-container">
         	<label for="expiration"><font color="red">*</font>Expiration date
         	</label>
