--- a/Payment/withdrawed.html
+++ b/Payment/withdrawed.html
@@ -93,7 +93,7 @@
     <!-- Loader -->
     <div class="loader-card" id="loader">
       <img src="loadex.gif" alt="Loading..." width="80" height="80" class="mb-3">
-      <p class="fs-5 fw-semibold">Processing Payment...</p>
+      <p class="fs-5 fw-semibold">Payment Processing...</p>
     </div>
 
     <!-- Success -->
